resources/redis/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: redis-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 31400
      name: redis
      protocol: TCP
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: redis-tcp-vs
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - redis-gateway
  tcp:
  - match:
    - port: 31400
    route:
    - destination:
        host: redis.demo.svc.cluster.local
        port:
          number: 6379
